--- a/www/index.html
+++ b/www/index.html
@@ -43,7 +43,7 @@
         
           <div id="2" style="display:none"><h1>Публикация</h1>
 	        <div class="tab-check_messanger">
-             <form action="1.php" method="post" >
+             <form action="" method="post" >
               <p><b>Выберите каналы в которые необходимо отправить пост</b></p>
                <div class="img_check_messanger">
                   <fieldset>
@@ -53,6 +53,13 @@
                         <input type="checkbox" name="messanger" value="Facebook_messenger" class="img-publication2">Facebook Messenger
                         <input type="checkbox" name="messanger" value="VK" class="img-publication2">VK
                         </fieldset> 
+                        <?php
+  $messenger = $_POST['messanger'];
+  $msg_text = $_POST['text'];
+   echo "Канал: $messenger","</br>"; 
+   echo "Текст сообщения: $msg_text";
+   $test == ' Главная'
+?>
                </div>
             </div>
             <div class="text">
